Chinook docs improved